--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -32,6 +32,8 @@ a {
 	position: relative;;
 	background: none;
 	margin-top: -1px;
+	margin-left: -1px;
+	margin-right: -1px;
 	border-radius: 0;
 	top: 0;
 	left: 0;
