--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -57,28 +57,28 @@
 
         <div class="field-wrap">
           <label class="active">
-            Secluded <span class="req">*</span>
+            Secludedness Rating (0 to 5) <span class="req">*</span>
           </label>
           <input type="number" min="0" max="5" name="secluded" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
-            Romantic <span class="req">*</span>
+            Romanticness Rating (0 to 5)<span class="req">*</span>
           </label>
         	<input type="number" min="0" max="5" name="romantic" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
-            Quiet <span class="req">*</span>
+            Quietness Rating (0 to 5)<span class="req">*</span>
           </label>
           <input type="number" min="0" max="5" name="quiet" required autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
           <label class="active">
-            Overall <span class="req">*</span>
+            Overallness Rating (0 to 5)<span class="req">*</span>
           </label>
           <input type="number" min="0" max="5" name="overall" required autocomplete="off"/>
         </div>
