--- a/public/css/places.css
+++ b/public/css/places.css
@@ -5,16 +5,14 @@
 	display: block;
 	margin: 1rem auto;
 	position: relative;
-	height: 100px;
+	height: 350px;
 	width: 100%;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	/*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .list-place img {
-	display: inline-block;
-	position: relative;
-	float: left;
-	height: 100px;
+	width: 100%;
 }
 
 .list-place-name {
@@ -27,4 +25,17 @@
  font-size: 1em;
  font-weight: 200;
  color: gray;
+}
+
+
+div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
 }
