--- a/public/css/places.css
+++ b/public/css/places.css
@@ -8,6 +8,7 @@
 	width: 100%;
 	/*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	padding-bottom: 2em;
 }
 
 .list-place img {
@@ -15,7 +16,7 @@
 }
 
 .list-place-name {
-	font-size: 1.2em;
+	font-size: 2em;
 	font-weight: 700;
 	color: #4CAF50;
 }
@@ -24,17 +25,4 @@
  font-size: 1em;
  font-weight: 200;
  color: gray;
-}
-
-
-div.polaroid {
-  width: 80%;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
-}
-
-div.container {
-  text-align: center;
-  padding: 10px 20px;
 }
